# HardwareAPI

./: .gitmodules  Interfaces.md  Interfaces.txt  Klassen.md  Klassen.txt  Notes.md  README.md  Strukturen.md  adapter_arduino_gpio.cpp  adapter_arduino_gpio.hpp  adapter_base_timer.hpp  adapter_stm32_gpio.cpp  adapter_stm32_timer.cpp  adapter_stm32_timer.hpp  boards.txt  embedded_dev_creating_API.md  idea_class_structure.cpp  stm32duino_tree.txt
Adapter_Konzept/: Makefile  Makefile2
Adapter_Konzept/Inc/: Hammer.hpp  Kneifzange.hpp  Zange.hpp
Adapter_Konzept/Src/: Hammer.cpp  Kneifzange.cpp  Zange.cpp  main.cpp  mylib.cpp
ExampleCode/: InputArduino.hpp  bsp_classe.cpp  factory.cpp  interface.hpp  main.cpp
ExampleCode/Arduino/: GPIObase.cpp  GPIObase.h  OutputArduino.cpp  OutputArduino.h  OutputSTM32.cpp  OutputSTM32.h  adapter_base_gpio.hpp  adapter_stm32_gpio.hpp
ExampleCode/Arduino/lib_arduino/: AdapterArduino.cpp  AdapterArduino.h  GPIOarduino.cpp  GPIOarduino.h
ExampleCode/Arduino/lib_stm32/: GPIOstm32.cpp  GPIOstm32.h  defines_stm32.h
Header/: factory.hpp  gpio_stm32.hpp  stm32factory.hpp  stm32g0xx.hpp
Interfaces/: gpio_base.hpp
Notes/: classes.hpp
Project/: README.md
Project/Demo_CubeMX_Project/: .mxproject  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Demo_CubeMX_Project.ioc  build.ninja  cmake_install.cmake  compile_commands.json
Project/Demo_CubeMX_Project/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
Project/Demo_Empty_Project/: CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  stm32c031c6tx_FLASH.ld
Project/Demo_Empty_Project/Src/: main.c
Project/Demo_Empty_Project/Startup/: startup_stm32c031c6tx.s
Project/Demo_Empty_Project/cmake/: vscode_generated.cmake
Project/ExternBlink_G071RB/: .clang-format
Project/ExternBlink_G071RB/ExternBlink/: .cproject  .project  CMakeLists.txt  ExternBlink Debug.launch  ExternBlink.ioc
Project/ExternBlink_G071RB/ExternBlink/Core/Inc/: main.h
Project/ExternBlink_G071RB/ExternBlink/Core/Src/: CMakeLists.txt  main.cpp
Project/ExternBlink_G071RB/ExternBlink/Debug/: makefile  objects.list  sources.mk
Project/ExternBlink_G071RB/ExternBlink/Debug/Core/Src/: main.cyclo  main.su  subdir.mk
Project/ExternBlink_G071RB/ExternBlink/Debug/Core/Startup/: subdir.mk
Project/ExternBlink_G071RB/ExternBlink/Debug/Drivers/STM32G0xx_HAL_Driver/Src/: subdir.mk
Project/ExternBlink_G071RB/ExternBlink/Debug/gpio/: gpio_base.cyclo  gpio_base.su  gpio_stm32.cyclo  gpio_stm32.su  output_base.cyclo  output_base.su  output_stm32.cyclo  output_stm32.su  subdir.mk
Project/ExternBlink_G071RB/ExternBlink/Drivers/STM32G0xx_HAL_Driver/Src/: CMakeLists.txt
Project/ExternBlink_G071RB/ExternBlink/app/: CMakeLists.txt  main.h
Project/ExternBlink_G071RB/ExternBlink/gpio/: gpio_base.h  gpio_stm32.h  output_base.h  output_stm32.cpp  output_stm32.h
Project/ExternBlink_G071RB/ExternBlink/gpio/inc/: input_base.h  output_base.h
Project/ExternBlink_G071RB/ExternBlink/gpio/src/: gpio_base.cpp  gpio_stm32.cpp  input_base.cpp  output_base.cpp
Project/ExternBlink_G071RB/ExternBlink/timer/inc/: timer.h
Project/MCU_driver_API/: CMakeCache.txt  README.md  build.ninja  cmake_install.cmake
Project/MCU_driver_API/app/: cmake_install.cmake
Project/MCU_driver_API/basic/: cmake_install.cmake
Project/MCU_driver_API/cmake/: Docs.cmake
Project/MCU_driver_API/core/: dac.hpp  (+2 more)
Project/MCU_driver_API/drivers/: CMakeLists.txt  sd.hpp
Project/MCU_driver_API/mcu_drivers/stm32c0/: CMakeLists.txt  cmake_install.cmake
Project/MCU_driver_API/mcu_drivers/stm32c0/CMSIS/: cmake_install.cmake
Project/MCU_driver_API/mcu_drivers/stm32c0/include/periph/: timer_stm32c0.hpp
Project/MCU_driver_API/mcu_drivers/stm32c0/src/: gpio_hw_mapping.hpp  gpio_stm32c0.cpp  rcc.hpp  spi_stm32c0.cpp
Project/MCUd_driver_API/: Makefile
Project/MyMCU/: CMakeLists.txt  Makefile  README.md
Project/MyMCU/app/: CMakeLists.txt  README.md  main.cpp  main.h
Project/MyMCU/basic/: CMakeLists.txt  README.md  addition.cpp  addition.h
Project/MyMCU/cmake/: arm_none_eabi_gcc.cmake
Project/MyMCU/core/: CMakeLists.txt  systick.h  timer.h
Project/MyMCU/debug_probes/: st-link.cmake
Project/MyMCU/drivers/: CMakeLists.txt  README.md  dataflash.hpp  encoder.hpp  hd44780.hpp  nrf24l01.hpp  sd.hpp  sd_spi.hpp  singlewire.hpp
Project/MyMCU/gpio/: CMakeLists.txt  README.md  gpio.h  gpio_pin_debouncer.cpp  gpio_pin_debouncer.h
Project/MyMCU/mcu_drivers/: CMakeLists.txt
Project/MyMCU/mcu_drivers/stm32c0/: CMakeLists.txt
Project/MyMCU/mcu_drivers/stm32c0/CMSIS/: CMakeLists.txt
Project/MyMCU/mcu_drivers/stm32c0/CMSIS/DSP/: CMakeLists.txt
Project/MyMCU/mcu_drivers/stm32c0/CMSIS/NN/: CMakeLists.txt
Project/MyMCU/mcu_drivers/stm32c0/include/: FreeRTOSConfig.h
Project/MyMCU/mcu_drivers/stm32c0/include/periph/: exti_stm32c0.hpp  gpio_stm32c0.hpp  spi_stm32c0.hpp  timer_stm32c0.hpp  uart_stm32c0.hpp
Project/MyMCU/mcu_drivers/stm32c0/src/: assert.c  exti_stm32c0.cpp  fault_handlers.c  gpio_hw_mapping.hpp  gpio_stm32c0.cpp  rcc.hpp  spi_stm32c0.cpp  systick.cpp  timer_hw_mapping.hpp  timer_stm32c0.cpp  uart_stm32c0.cpp  wdt.cpp
Project/MyMCU/mcu_drivers/stm3c0/: CMakeLists.txt
Project/MyMCU/mcu_drivers/stm3c0/CMSIS/: CMakeLists.txt
Project/MyMCU/mcu_drivers/stm3c0/include/periph/: dma_stm32c0.hpp  exti_stm32c0.hpp  gpio_stm32c0.hpp  spi_stm32c0.hpp
Project/MyMCU/mcu_drivers/stm3c0/src/: exti_stm32c0.cpp  gpio_hw_mapping.hpp  gpio_stm32c0.cpp  spi_stm32c0.cpp  timer_stm32c0.cpp  uart_stm32c0.cpp
Project/MyMCU/periph/: CMakeLists.txt  exti.h  pwm.h  rtc.h  spi.h  uart.h  wdt.h
Project/MyMCU/spi/: spi.h  spi.hpp
Project/MyMCU/tests/: CMakeLists.txt
Project/NucleoC031C6/: .mxproject  CMakeCache.txt  CMakeLists.txt  NucleoC031C6.ioc  build.ninja  cmake_install.cmake  compile_commands.json
Project/NucleoF072RB_CANSlave/: .cproject  .mxproject  .project  NucleoF072RB_CANSlave Debug.launch  NucleoF072RB_CANSlave.code-workspace  NucleoF072RB_CANSlave.ioc  NucleoF072RB_CANSlave.launch  STM32CANHardware.h
Timer/: main.cpp
(+177 files in other folders)
